--- a/css/app.css
+++ b/css/app.css
@@ -2319,6 +2319,7 @@ html {
  */
 body {
   direction: rtl;
+  text-align: right;
   margin: 0;
   line-height: 1; }
 
@@ -3067,11 +3068,11 @@ a.subdued {
   .bar.bar-clear {
     border: none;
     background: none;
-    color: #fff; }
+    color: #000; }
     .bar.bar-clear .button {
-      color: #fff; }
+      color: #000; }
     .bar.bar-clear .title {
-      color: #fff; }
+      color: #000; }
   .bar.item-input-inset .item-input-wrapper {
     margin-top: -1px; }
     .bar.item-input-inset .item-input-wrapper input {
@@ -3081,7 +3082,7 @@ a.subdued {
       background: transparent; }
   .bar.bar-light {
     border-color: #ddd;
-    background-color: white;
+    background-color: #8c8c8c;
     background-image: linear-gradient(0deg, #ddd, #ddd 50%, transparent 50%);
     color: #444; }
     .bar.bar-light .title {
@@ -3248,7 +3249,7 @@ a.subdued {
 
 .bar-light .button {
   border-color: #ddd;
-  background-color: white;
+  background-color: #8c8c8c;
   color: #444; }
   .bar-light .button:hover {
     color: #444;
