--- a/core/components/login/templates/credentials.html
+++ b/core/components/login/templates/credentials.html
@@ -1,14 +1,14 @@
-<ion-view view-title="{{ 'mm.login.credentials' | translate }}">
+<ion-view view-title="تطبيق الأمثل">
   <ion-content mm-state-class>
     <div class="list">
       <div class="item item-text-wrap">{{ 'mm.login.credentialsdescription' | translate }} <strong>{{siteurl}}</strong></div>
       <form>
         <label class="item item-input item-stacked-label">
-          <span class="input-label">{{ 'mm.login.username' | translate }}</span>
+          <span class="input-label">اسم المستخدم</span>
           <input type="text" placeholder="{{ 'mm.login.username' | translate }}" ng-model="credentials.username" autocapitalize="off" autocorrect="off" mm-auto-focus ng-disabled="isBrowserSSO">
         </label>
         <label class="item item-input item-stacked-label">
-          <span class="input-label">{{ 'mm.login.password' | translate }}</span>
+          <span class="input-label">كلمة المرور</span>
           <input type="password" placeholder="{{ 'mm.login.password' | translate }}" ng-model="credentials.password" ng-disabled="isBrowserSSO">
         </label>
         <div class="item">
